Update S1 in last homework

--- a/group6/12330071/S1/index.html
+++ b/group6/12330071/S1/index.html
@@ -12,7 +12,7 @@
         <div id="button">
           <div id="info-bar">
             <div style="display:block" class="info">
-              <p id="result">11</p>
+              <p id="result"></p>
             </div>
           </div>
           <div id="control-ring-container">
